Fixed x overflow on device page

--- a/FacMan/public/stylesheets/style.css
+++ b/FacMan/public/stylesheets/style.css
@@ -19,6 +19,10 @@ footer {
   margin-bottom: 15px;
 }
 
+.row {
+  margin: 0 !important;
+}
+
 .table>tbody>tr>td {
   vertical-align: middle !important;
 }
